Add a short description of the workflow
Quickly present the 5 parts of the book

issue #19

--- a/workflow.Rmd
+++ b/workflow.Rmd
@@ -1,23 +1,35 @@
 # The workflow {#workflow}
 
--> Overview of the workflow
+This book divides the workflow of building big Shiny apps in five parts: Design, Prototype, Build, Secure and Deploy.  
 
 ## Part 1: Design 
 
-// TODO
+To _Design_ is to participate to the conception of the application. 
+This part comes before any line of code. 
+As for any software or web application, there will be discussions between the end-users, the bakers and the developpers. 
+In this part, we will propose some tools to help define the goal of the application and find a compromise between users' dreams, technical issues and time allocated to the development.  
 
 ## Part 2: Prototype 
 
-// TODO
+To _Prototype_ is to define a visual proposition for the application. 
+A Shiny application is a visual interface to communicate with end users. 
+The general appearance, position of the different inputs and outputs as well as graphical interactions need to be chosen with care. 
+In this part, we will propose the 'UI-first' method with tools to focus on the bodyshell of the app before engineering the engine.  
 
 ## Part 3: Build 
 
-// TODO
+To _Build_ is to develop the engine of the application. 
+Bulding a robust Shiny application requires to use the correct development tools.
+In this part, we will propose to develop using [{golem}](https://thinkr-open.github.io/golem/), a package especially created to help design a robust and maintainable Shiny application inside a R package.
 
 ## Part 4: Secure 
 
-// TODO
+To _Secure_ is to ensure your application will long last.
+Some good practices will help during the development of the application.
+In this part, we will go through unit tests, reproducible development environment, version control and continuous integration applied to Shiny applications.
 
 ## Part 5: Deploy 
 
-// TODO
+To _Deploy_ is to put your application in production.
+There are multiple ways to present your application to its targeted public. 
+In this part, we will quickly present methods to deploy your application and show how {golem} can help you in this task. 
