fixed typo: tp -> to

--- a/big-shiny.Rmd
+++ b/big-shiny.Rmd
@@ -3,7 +3,7 @@
 # About Successful Shiny Apps {#successfulshinyapp}
 
 If you're reading this page, chances are you already know what a Shiny App is — a web application that communicates with R, built in R, and working with R. 
-The beauty of `{shiny}` is that it makes it easy for anybody tp create a small app in a matter of hours.  
+The beauty of `{shiny}` is that it makes it easy for anybody to create a small app in a matter of hours.  
 With small and simple Shiny apps, no knowledge of HTML, CSS or JavaScript is required, which makes it really easy to use — you can rapidly create a POC for a data-product and showcase an algorithm or present your results with an elegant, simple to build user interface. 
 
 ## A (very) short introduction to Shiny 
