Try multiple deployment and clean unnecessary docs

--- a/ux-matters.Rmd
+++ b/ux-matters.Rmd
@@ -1,15 +1,15 @@
 # (PART) Step 1: Designing {-}
 
-TO READ :
-
-https://en.wikipedia.org/wiki/Principle_of_least_astonishment#cite_note-Raymond2004-1
-https://www.ibm.com/developerworks/web/library/us-cranky10/index.html
-https://www.cs.tufts.edu/~nr/cs257/archive/mike-cowlishaw/rexx.pdf
-https://books.google.fr/books?id=I-NOcVMGWSUC&pg=PA85&redir_esc=y#v=onepage&q&f=false
-http://www.faqs.org/docs/artu/ch11s01.html
-http://canonical.org/~kragen/tao-of-programming.html#book4
-
 # UX Matters {#uxmatters}
+
+<!-- TO READ : -->
+
+<!-- https://en.wikipedia.org/wiki/Principle_of_least_astonishment#cite_note-Raymond2004-1 -->
+<!-- https://www.ibm.com/developerworks/web/library/us-cranky10/index.html -->
+<!-- https://www.cs.tufts.edu/~nr/cs257/archive/mike-cowlishaw/rexx.pdf -->
+<!-- https://books.google.fr/books?id=I-NOcVMGWSUC&pg=PA85&redir_esc=y#v=onepage&q&f=false -->
+<!-- http://www.faqs.org/docs/artu/ch11s01.html -->
+<!-- http://canonical.org/~kragen/tao-of-programming.html#book4 -->
 
 We have a natural tendency, as R-coders, to be focused on the back-end, i.e the server part of the application
 ^[aka what happens in the server side of a Shiny App]. 
