typos fix chapter 3

--- a/structure.Rmd
+++ b/structure.Rmd
@@ -115,7 +115,7 @@ htmltools::save_html(my_mod_ui("test"), my_mod_ui_test)
 golem::expect_html_equal(my_mod_ui("test"), my_mod_ui_test)
 ```
 
-`{golem}` also provides two functions, `expect_shinytag()` and `expect_shinytaglist()`, that test if an objet is of class `"shiny.tag"` or  `"shiny.tag.list"`.
+`{golem}` also provides two functions, `expect_shinytag()` and `expect_shinytaglist()`, that test if an object is of class `"shiny.tag"` or  `"shiny.tag.list"`.
  
 + Testing package launch: when launching `golem::use_recommended_tests()`, you'll find a test built on top of `{processx}` that allows to check if the application is launch-able. Here's a short description of what happens: 
 
@@ -215,7 +215,7 @@ So how can we integrate this "Shiny App as Package" into Connect or Shiny Server
 
 + Using an internal package manager like [RStudio Package Manager](https://www.rstudio.com/products/package-manager/), where the package app is installed, and then you simply have to create an `app.R` with the small piece of code from the section just before. 
 
-+ Uploading the package package folder to the server. In that scenario, you use the package folder as the app package, and upload the whole thing. Then, write an `app.R` that does: 
++ Uploading the package folder to the server. In that scenario, you use the package folder as the app package, and upload the whole thing. Then, write an `app.R` that does: 
 
 ```{r eval = FALSE}
 pkgload::load_all()
@@ -224,7 +224,7 @@ shiny::shinyApp(ui = app_ui(), server = app_server)
 
 And of course, don't forget to add this file in the `.Rbuildignore`!
 
-This is the file you'll get if your run `golem::add_rconnect_file()`.
+This is the file you'll get if you run `golem::add_rconnect_file()`.
 
 #### Docker containers
 
