comment is now ""

--- a/index.Rmd
+++ b/index.Rmd
@@ -9,6 +9,10 @@ link-citations: yes
 description: "Building Big Shiny Apps - A Workflow"
 ---
 
+```{r}
+knitr::opts_chunk$set( comment = "")
+```
+
 # Introduction {-}
 
 This book is still at a Work in Progress stage.
