--- a/javascript.Rmd
+++ b/javascript.Rmd
@@ -1,33 +1,47 @@
 # Using JavaScript {#optimjs}
 
+```{r include = FALSE}
+knitr::opts_chunk$set( comment = "")
+```
+
 In its core, building a Shiny app is building a JavaScript app that can talk with an R session. 
 This process is hidden from the common Shiny developer, who usually works on everything from R. 
-In a sense,  everything is done with R, but when you are writting UI elements in Shiny what you are actually doing is building a series of HTML tags, which are then linked to JavaScript events. 
+In the end, for most of the Shiny apps out there, everything is done with R, but when you are writing UI elements in Shiny what you are actually doing is building a series of HTML tags, which are then linked to JavaScript events. 
 Later on, when the app is running, these JavaScript events will communicate with R, in the sense that they will send data to R, and receive data from R. 
 Most of the time, when this JavaScript events are receiving data, that also means that they modify the page the user sees.
-What happens under the hood is a little bit complex and out of scope for this book, but the general idea is there: R talks to your browser through a websocket, and this very same browser talks to R through the same websocket.
+What happens under the hood is a little bit complex and out of scope for this book, but the general idea is there: R talks to your browser through a web socket, and this browser talks to R through the same web socket.
 
 // TODO: create here a simple Flowchart 
-// R -> (WebSocket) -> JS 
-// R <- (WebSocket) <- JS 
+
+// R -> (Web Socket) -> JS 
+
+// R <- (Web Socket) <- JS 
 
 It's important to note here that the communication happens in both ways: from R to JavaScript, and from JavaScript to R. 
 In fact, when we write a piece of code like `sliderInput("plop", "this", 1, 10, 5)`, what we are doing is creating a binding between JavaScript and R, where JavaScript listens to any event happening in the browser on the slider with the id `"plop"`, and whenever JavaScript detects that something happens to this element, something (most of the time its value) is sent back to R. 
 With `output$bla <- renderPlot({})`, what we are doing is making the two communicates the other way around: we are telling JavaScript to listen to any incoming data from R for the `id` `"bla"`, and whenever JavaScript sees incoming data from R, it puts it into the proper HTML tag. 
 
-So even if everything happens in R, we __are__ writting a web (so HTML, CSS and JavaScript) application, from R. 
+So even if everything happens in R, we __are__ writing a web application (i.e. HTML, CSS and JavaScript elements), from R. 
 Once you've realized that, the possibilities are endless: in fact almost anything doable in a web app can be done in Shiny. 
-What this also implies is that getting (even a little bit) better at writting HTML, CSS and especially JavaScript will make your app better, lighter, and more efficient. 
-Indeed, JavaScript is a language which has been designed to interact with a web page: change element appearances, hide and show things, cick somewhere, show alerts and prompts... 
-What that means is that knowing just enought JavaScript can improve the quality of your app: especially when you've been using R to build some complex UI renderings: think conditional pannels, simulating a button click from the server, hide and show elements...
+What this also implies is that getting (even a little bit) better at writing HTML, CSS and especially JavaScript will make your app better, lighter, and more user friendly. 
+JavaScript is a language that has been designed to interact with a web page: change element appearances, hide and show things, click somewhere, show alerts and prompts... 
+What that means is that knowing just enough JavaScript can improve the quality of your app: especially when you've been using R to build some complex UI renderings: think conditional panels, simulating a button click from the server, hide and show elements... 
 All these things are good examples of where you should be using JavaScript instead of building more or less complex `renderUI` or `insertUI` patterns in your server.
 
+Moreover, the number of JavaScript libraries available on the web is tremendous ; and the good news is that Shiny has everything it needs to bundle external JavaScript libraries inside your application^[
+This can also be done by wrapping a JS libraries inside a package, which will later be used inside an application. 
+See for example [`{glouton}`](https://github.com/ColinFay/glouton), which is a wrapper around the [`js-cookie`](https://github.com/js-cookie/js-cookie) JavaScript library.
+].
+
 This is what this part aims to do: giving you just enough JavaScript knowledge to lighten your Shiny App, and improve the global user and developer experience.
-In this part, we'll first see some JavaScript basics, which can be used "client-side" only, or later in R & JS communication, which is what we'll see next: how to make R and JavaScript communicate with each other. In this part, we'll also explore common patterns for JavaScript in Shiny. 
+In this part, we'll first see some JavaScript basics. 
+This JS code can be used "client-side" only, i.e. only in your browser, by making R & JS communicate with each other. 
+We'll also see this in in this chapter: how to make R and JavaScript exchange data. 
+In this part, we'll also explore common patterns for JavaScript in Shiny. 
 Finally, we'll quickly present some of the functions from `{golem}` which are built on top of JavaScript. 
 
 > Note that this chapter is not supposed to be a comprehensive JavaScript course. 
-External resources are linked at the botton of this chapter if you want to dive deeper into JavaScript.
+External resources are linked all throughout this chapter if you want to dive deeper into JavaScript.
 
 ## A quick introduction to JavaScript
 
@@ -35,30 +49,45 @@ JavaScript is a programming language which has been designed to work in the brow
 You can now work with JavaScript in a server with Node.JS, but this is out of scope of this book. 
 See linked resources to learn more.
 ].
-JavaScript, as R, can be used as a functional language, but most of what we do in JavaScript is done in an object-oriented way. 
-You have to think of a web page as a tree, where the top of the webpage is the root node, and every element in the page is a node in this tree. 
-And of course, you can work on any of these HTML node with JavaScript: modify it, bind and/or listen to events, hide and show it...
+There are three ways to include the JavaScript code inside your web app: 
 
-JavaScript code can be add to your app "as-is", in other words just as if you were creating a web app: with an html `script` tag.
++ As an external file, which is delivered to the browser alongside your main application page
++ Inside a `<script>` HTML tag your page
++ On a specific tag, for example by adding an `onclick` event straight on the tag
+
+> Note that the good practice when it comes to include JavaScript is to add the code inside an external file. 
 
 If you're working with `{golem}`, including a JavaScript file is performed using two functions: 
 
-+ `golem::add_js_file("name")`, which adds a standard JavaScript file, i.e. one which is not meant to be used to communicate with R.
++ `golem::add_js_file("name")`, which adds a standard JavaScript file, i.e. one which is not meant to be used to communicate with R (which is the "modern standard way" to do it).
 We'll see in the first part of this chapter how to add JavaScript code there.
-+ `golem::add_js_handler("name")`, which creates a file with a skeleton for shiny handlers. 
++ `golem::add_js_handler("name")`, which creates a file with a skeleton for shiny handlers (which is specific to Shiny). 
 We'll see this second type of elements in the `JavaScript <-> Shiny communication` part.
 
-### Understanding div, class, and id
+OK, good, but what do we do now?
 
+### Understanding html, class, and id
+
+You have to think of a web page as a tree, where the top of the webpage is the root node, and every element in the page is a node in this tree (this tree is called a DOM, for Document Object Model). 
+And of course, you can work on any of these HTML node with JavaScript: modify it, bind and/or listen to events, hide and show it...
+But of course, you have to find a way to identify these elements: either as a group of elements or as a unique element inside the whole tree: that's what html semantic elements, classes and ids are made for.
 Consider this piece of code:
 
-```{r}
+```{r echo = TRUE, eval = FALSE}
 library(shiny)
 fluidPage(
   titlePanel("Hello Shiny"), 
   actionButton("go", "go")
 )
 ```
+
+```
+<div class="container-fluid">
+  <h2>Hello Shiny</h2>
+  <button id="go" type="button" class="btn btn-default action-button">go</button>
+</div>
+```
+
 
 This `{shiny}` code creates a piece of HTML code, which contains three nodes: a `div`, which is a container, an `h2`, which is a level two header, a button which has an id and a class.
 Both are included into the `div`. 
@@ -77,14 +106,15 @@ The `jQuery` framework is natively included in Shiny.
 > jQuery is a fast, small, and feature-rich JavaScript library. It makes things like HTML document traversal and manipulation, event handling, animation, and Ajax much simpler with an easy-to-use API that works across a multitude of browsers. 
 
 jQuery is a very (like, very) popular JavaScript library which is designed to manipulate the DOM, its events and its elements. 
-It can be used to do a lot of things, like hide and show, change class, click somewhere... And to be able to do that, it comes with the notion of selectors, which will be put between `$()`.
-You can use:
+It can be used to do a lot of things, like hide and show, change class, click somewhere... 
+And to be able to do that, it comes with the notion of selectors, which will be put between `$()`.
+You can use, for example:
 
-+ `#plop` to refer to the element with the id `plop`
++ `$("#plop")` to refer to the element with the id `plop` 
 
-+ `.pouet` to refer to element(s) of class `pouet`
++ `$(".pouet")` to refer to element(s) of class `pouet`
 
-+ `"button:contains('this')"` to refer to the buttons with a text containing `'this'`
++ `$("button:contains('this')")` to refer to the buttons with a text containing `'this'`
 
 You can also use special HTML attributes.
 For example:
@@ -96,15 +126,26 @@ For example:
 contains the `href` & `data-value` attributes.
 You can refer to these with `[]` after the tag name.
 
-+ `a[href = "https://thinkr.fr"]` refers to link(s) with `href` being `https://thinkr.fr`
++ `$("a[href = 'https://thinkr.fr'])` refers to link(s) with `href` being `https://thinkr.fr`
 
-+ `a[data-value="panel2"]` refers to link(s) with  `data-value` being `"panel2"`
++ `$('a[data-value="panel2"]')` refers to link(s) with  `data-value` being `"panel2"`
 
-### Common JavaScript patterns for Shiny
+All these selectors, along many others, are used to identify one or more node in the big tree which is a web page. 
+Once we've identified these elements, we can either extract or change data contained in these nodes, or launch methods contained inside these nodes.
+Indeed JavaScript, as R, can be used as a functional language, but most of what we do is done in an object-oriented way. 
+In other words, you'll interact with objects from the web page, and these objects contain data and methods. 
+
+Note that these behavior is not specific to jQuery: elements can also be selected with standard JavaScript. 
+jQuery has the advantage of simplifying selections and actions, and to be cross-platform, making it easier to ship applications that can work on all major browsers. 
+And, it comes with Shiny for free! 
+
+## Client-side JavaScript
 
 It's hard to give an exhaustive list of what you can do with JavaScript inside Shiny. 
 As a Shiny app is part JavaScript, part R, once you've got a good grasp of JavaScript you can quickly enhance any of your applications.
-That being said, there are some common things that can be done that would allow you to immedialy optimise your application: i.e. small JavaScript functions that can will prevent you from writing complexe algorithmic logic in your application server. 
+That being said, there are some common things that can be done that would allow you to immediately optimize your application: i.e. small JavaScript functions that will prevent you from writing complex algorithmic logic in your application server. 
+
+### Common patterns
 
 + `$('#id').show();` and `$('#id').hide();` show and hide one or more elements that match the given selector.
 For example, this can be use to replace: 
@@ -119,12 +160,12 @@ output$ui <- renderUI({
 })
 ```
 
-+ `alert("message")` uses the built-in alert-box mechanism from the user's browser. 
++ `alert("message")` uses the built-in alert-box mechanism from the user's browser (i.e., the `alert()` function is not part of jQuery but it's built inside your browser).
 It works well as it relies on the browser instead of R. 
-For example, you can use this functionality to replace a call to `{shinyalert}`: the result is a little bit less esthetically pleasing, but that's easier to implement and maintain.
+For example, you can use this functionality to replace a call to `{shinyalert}`: the result is a little bit less aesthetically pleasing, but that's easier to implement and maintain.
 
 + `var x = prompt("this", "that");` this function open the built-in prompt, which is a text area where the user can input text. 
-When the user click on "OK", the text is stocked in a variable `x` here, which you can then send back to R (see further part down this chapter for info about how to do that). 
+With this code, when the user clicks on "OK", the text is stocked in a variable `x`, which you can then send back to R (see further part down this chapter for more info about how to do that). 
 This can replace something like : 
 
 ```{r}
@@ -165,39 +206,48 @@ output$ui <- renderUI({
 ```
 
 + `$("#id").remove();` completely removes the element from the DOM. 
-Can be used a replacement for `shiny::removeUI()`.
+IT can be used as a replacement for `shiny::removeUI()`, or as a conditional UI. 
 
+### Where to put them - introduction to JavaScript events
 
-### Adding attributes to HTML elements
+OK, now that we've got some ideas about JS code that can be used in Shiny, where do we put them? 
+HTML and JS have a concept called `events`, which happens when the user manipulates the webpage: when the user clicks, hovers (the mouse goes over an element), press the keyboard... 
+All these events can trigger a JavaScript function. 
+Here are some example of adding JavaScript functions to DOM events:
 
 +`onclick`
 
+The `onclick` attribute can be add straight inside the HTML tag when possible:
+
 ```{r eval = FALSE}
-actionButton(
-  "plop", "plop", 
-  onclick = "alert('hello world')"
+tags$button(
+  "Show"
+  onclick = "$('#plot').show()"
 )
 ```
 
-+ `shiny::tagAppendAttributes`
+Or with `shiny::tagAppendAttributes`:
 
 ```{r eval = FALSE}
 plotOutput(
-  "plop"
+  "plot"
 ) %>% tagAppendAttributes(
   onclick = "alert('hello world')"
 )
 ```
 
+Here is for example a small Shiny app that implements this behavior:
+
 
 ```{r eval = FALSE}
 library(shiny)
+library(magrittr)
 ui <- function(request){
   fluidPage(
     plotOutput(
-      "plop"
+      "plot"
     ) %>% tagAppendAttributes(
-      onclick = "alert('hello world')"
+      onclick = "alert('iris plot!')"
     )
   )
 }
@@ -213,13 +263,87 @@ shinyApp(ui, server)
 
 Real Life example : https://github.com/ColinFay/tidytuesday201942/blob/master/R/mod_dataviz.R#L109 and https://github.com/ColinFay/tidytuesday201942/blob/master/R/mod_dataviz.R#L305
 
+That, of course, works well with very small JavaScript code. 
+For longer JavaScript code, you can write a function inside and external file, and add it to your app. 
+In `{golem}`, this works by launching the `add_js_file("name")`, which will create a `.js` file. 
+You'll then need to add this function using the `tags$script(src="www/name.js")` inside the `golem_add_external_resources()` function in `R/app_ui.R` file. 
+
+This, for example, could be: 
+
+> inst/app/www/script.js 
+
+```{js eval = FALSE, echo = TRUE}
+function alertme(id){
+  // Asking information
+  var name = prompt("Who are you?");
+  // Showing an alert
+  alert("Hello " + name + "! You're seeing " + id);
+}
+```
+
+Then:
+
+```{r eval = FALSE}
+plotOutput(
+  "plot"
+) %>% tagAppendAttributes(
+  onclick = "alertme('plot')"
+)
+```
+
+Inside this `inst/app/www/script.js`, you can also attach a new behavior with jQuery to one or several elements. 
+For example, you can add this `alertme` / `onclick` behavior to all plots of the app:
+
+```{js eval = FALSE, echo = TRUE}
+function alertme(id){
+  var name = prompt("Who are you?");
+  alert("Hello " + name + "! You're seeing " + id);
+}
+
+/* We're adding this so that the function is launched only
+when the document is ready */
+$(function(){ 
+  // Selecting all Shiny plots
+  $(".shiny-plot-output").on("click", function(){
+    /* Calling the alertme function with the id 
+    of the clicked plot */
+    alertme(this.id);
+  });
+});
+```
+
+Then, all the plots from your app will receive this on click event^[
+This `click` behavior can also be done through `$(".shiny-plot-output").click(...)`. 
+We chose to display the `on("click")` pattern as it can be generalized to all DOM events.
+].
+
+Note that there is a series of `Shiny events`, which are specific to Shiny but that you can used as the one we've just seen: 
+
+```{js eval = FALSE, echo = TRUE}
+function alertme(){
+  var name = prompt("Who are you?");
+  alert("Hello " + name + "! Welcome to my app");
+}
+
+$(function(){ 
+  // Waiting for Shiny to be connected
+  $(document).on('shiny:connected', function(event) {
+    alertme();
+  });
+});
+```
+
+See [JavaScript Events in Shiny](https://shiny.rstudio.com/articles/js-events.html) for the full list of JavaScript events available in Shiny.
+
 ## JavaScript <-> Shiny communication 
 
-First of all, 
+Now that we've seen some client-side optimization, i.e. R doesn't do anything with these events when they happen (in fact R is not even aware that they happen), let's now see how we can make these two communicate with each other. 
 
 ### From R to JavaScript 
 
-Inside this skeleton:
+Calling JS from the server side is done by defining a series of `CustomMessageHandler`: these are functions with one argument that can then be called using the `session$sendCustomMessage()` method from the server. 
+
+You can define them using this skeleton:
 
 ```{r echo = FALSE}
 readLines("golex/inst/app/www/plop.js") %>%
@@ -228,48 +352,155 @@ readLines("golex/inst/app/www/plop.js") %>%
 
 > `golem::add_js_handler()`
 
-Called from server-side with:
-
+Then, it will be called from server-side with:
 
 ```{r eval = FALSE}
 session$sendCustomMessage("fun", list())
 ```
 
-`list()` -> JSON. 
+Note that the `list()` argument from your function will be converted to JSON, and read as such from JS. 
+In other words, if your have an argument called `x`, and you call the function with `list(a = 1, b = 12)`, then in JS you'll be able to use `x.a` and `x.b`.
 
-Example:
+For example:
 
-- JavaScript 
+> In `inst/app/www/script.js`
 
 ```{js, eval = FALSE, echo = TRUE}
-Shiny.addCustomMessageHandler('monalerte', function(arg) {
-alert(arg.message);
-alert(arg.message2);
+Shiny.addCustomMessageHandler('computed', function(mess) {
+  alert("Computed " + mess.what + " in " + mess.sec + " secs");
 })
 ```
 
-- R 
+Then in R: 
 
 ```{r eval = FALSE}
-session$sendCustomMessage(
-  "monalerte", 
-  list(
-    message = "Mon premier message", 
-    message2 = "Mon deuxième message"
+observe({
+  deb <- Sys.time()
+  # Do the computation for id
+  Sys.sleep(
+    sample(1:5, 1)
   )
-)
+  session$sendCustomMessage(
+    "computed", 
+    list(
+      what = "plop", 
+      sec = round(Sys.time() - deb)
+    )
+  )
+})
 ```
 
 ### From JavaScript to R
+
+How to do the other way around (from JS to R)?
+Shiny apps contain an object called `Shiny`, which can be used to send values to R, by creating an `IputValue`. 
+For example, with: 
 
 ```{js, eval = FALSE, echo = TRUE}
 Shiny.setInputValue("rand", Math.random())
 ```
 
+You'll bind an input that can be caught from the server side with:
+
 ```{r eval = FALSE}
 observeEvent( input$rand , {
   print( input$rand )
 })
+```
+
+This `Shiny.setInputValue` can of course be used inside any JavaScript function. 
+Here is a small example wrapping some of the things we've seen previously:
+
+> In `inst/app/www/script.js`
+
+```{js eval = FALSE, echo = TRUE}
+function alertme(){
+  var name = prompt("Who are you?");
+  alert("Hello " + name + "! Welcome to my app");
+  Shiny.setInputValue("username", name)
+}
+
+$(function(){ 
+  // Waiting for Shiny to be connected
+  $(document).on('shiny:connected', function(event) {
+    alertme();
+  });
+  
+  $(".shiny-plot-output").on("click", function(){
+    /* Calling the alertme function with the id 
+    of the clicked plot */
+    Shiny.setInputValue("last_plot_clicked", this.id);
+  });
+});
+```
+
+These events (getting the user name and the last plot clicked), can be caught from the server side with:
+
+```{r eval = FALSE}
+observeEvent( input$username , {
+  cli::cat_rule("User name:")
+  print(input$username)
+})
+
+observeEvent( input$last_plot_clicked , {
+  cli::cat_rule("Last plot clicked:")
+  print(input$last_plot_clicked)
+})
+```
+
+Which will give:
+
+``` 
+> golex::run_app()
+Loading required package: shiny
+
+Listening on http://127.0.0.1:5495
+── User name: ─────────────────────────────────────────────────────
+[1] "Colin"
+── Last plot clicked: ─────────────────────────────────────────────
+[1] "plot"
+── Last plot clicked: ─────────────────────────────────────────────
+[1] "plopt"
+```
+__Important note__: if you're using modules, you'll need to pass the namespacing of the `id` to be able to get it back from the server. 
+This can be done using the `session$ns` function, which comes by default in any golem-generated module. 
+And as an example speaks more than a 1000 words, here is what we mean by that:
+
+```{js eval = FALSE, echo = TRUE}
+$( document ).ready(function() {
+  Shiny.addCustomMessageHandler('whoareyou', function(arg) {
+    var name = prompt("Who are you?")
+    Shiny.setInputValue(arg.id, name);
+  })
+});
+```
+
+```{r}
+mod_my_first_module_ui <- function(id){
+  ns <- NS(id)
+  tagList(
+    actionButton(
+      ns("showname"), "Enter your name"
+    )
+  )
+}
+
+mod_my_first_module_server <- function(input, output, session){
+  ns <- session$ns
+  observeEvent( input$showname , {
+    session$sendCustomMessage(
+      "whoareyou", 
+      list(
+        id = ns("name")
+      )
+    )
+  })
+  
+  observeEvent( input$name , {
+    cli::cat_rule("Username is:")
+    print(input$name)
+  })
+}
 ```
 
 
@@ -278,29 +509,34 @@ observeEvent( input$rand , {
 `{golem}` comes with a series of JavaScript functions that you can call from the server. 
 These functions are added by default with `golem::activate_js()` in `app_ui`.
 
+Then they are called with `golem::invoke_js("function", "element")`.
 
-Then they are called with `golem::invoke_js("function", "ui_element")`.
-
-This `ui_element` define the UI element to interact with. 
+This `element` defines is a series of elements (most of the time scalar elements) that can be used to select the DOM node you need to interact with.
 It can be a full jQuery selector, an id or a class.
+Note that you can pass multiple elements, with `invoke_js` `...` parameters
 
 ### `golem::activate_js()`
 
 + `showid` & `hideid`, `showclass` & `hideclass` show and hide elements through their id or class.
 
 ```{r eval = FALSE}
-session$sendCustomMessage("showid", ns("plot"))
+golem::invoke_js("showid", ns("plot"))
 ```
 
 + `showhref` & `hidehref` hide and show a link by trying to match the `href` content.
 
 ```{r eval = FALSE}
-session$sendCustomMessage("showhref", "panel2")
+golem::invoke_js("showhref", "panel2")
 ```
 
 + `clickon` click on the element. You have to use the full jQuery selector. 
 
 + `show` & `hide` show and hide elements, using the full jQuery selector.
 
+See `?golem::activate_js` for a full list of built-in functions.
+
 ## Learn more about JavaScript
 
+Here is a list of external resources to learn more about JavaScript: 
+
+// TODO 
