changed golex and golem builder

--- a/index.Rmd
+++ b/index.Rmd
@@ -9,7 +9,7 @@ link-citations: yes
 description: "Building Big Shiny Apps - A Workflow"
 ---
 
-```{r}
+```{r include = FALSE}
 knitr::opts_chunk$set( comment = "")
 ```
 
