no eval of the JavaScript chunks

--- a/javascript.Rmd
+++ b/javascript.Rmd
@@ -1,7 +1,7 @@
 # Using JavaScript {#optimjs}
 
 ```{r include = FALSE}
-knitr::opts_chunk$set( comment = "")
+knitr::opts_chunk$set( comment = "", eval = FALSE)
 ```
 
 In its core, building a Shiny app is building a JavaScript app that can talk with an R session. 
