switched author list to index.Rmd

--- a/index.Rmd
+++ b/index.Rmd
@@ -42,7 +42,15 @@ This first part will be light on code: you'll read more about conceptual ideas a
 
 ## About the authors {-}
 
-// TODO 
+// TODO
+
+<li><a href="https://colinfay.me/">Colin Fay</a></li>
+
+<li><a href="https://twitter.com/VincentGuyader">Vincent Guyader</a></li>
+
+<li><a href="https://twitter.com/CervanGirard">Cervan Girard</a></li>
+
+<li><a href="https://statnmap.com/">Sébastien Rochette</a></li>
 
 ## Want to help? {-}
 
