eval false and to do

--- a/big-shiny.Rmd
+++ b/big-shiny.Rmd
@@ -103,17 +103,20 @@ iris[
 9 lines of code for something that should also be written in one, three, five...
 
 Another drawback of this metric is that it focuses on numbers instead of readability, and on the long run yes, readability matters
-^["Pressure to keep the codebase size down by using extremely dense and complicated implementation techniques can cause a cascade of implementation complexity in the system, leading to an un-debuggable mess.", from _The Art of Unix Programming_, "Chapter 13: Speaking of Complexity"]. But if you're stick with that method, 
+^["Pressure to keep the codebase size down by using extremely dense and complicated implementation techniques can cause a cascade of implementation complexity in the system, leading to an un-debuggable mess.", from _The Art of Unix Programming_, "Chapter 13: Speaking of Complexity"]. 
+
+// TODO
 
 ```{r eval = FALSE}
 devtools::install_github("hrbrmstr/cloc")
 ```
 
-```{r}
+```{r eval = FALSE}
 library(cloc)
 cloc_cran("shiny", .progress = FALSE)
 cloc_cran("attempt", .progress = FALSE)
 ```
+
 
 
 -> https://github.com/hrbrmstr/cloc
