update with // TODO

--- a/challenges.Rmd
+++ b/challenges.Rmd
@@ -8,6 +8,8 @@ French proverb
 
 ### Prepare for success
 
+// TODO
+
 -> Planning is everything 
 
 -> Get ready for complexity
@@ -18,6 +20,8 @@ Understand the big picture, but implement one small feature at a time.
 -> Future is now
 
 ### Applying the KISS principle
+
+// TODO
 
 > The KISS principle states that most systems work best if they are kept simple rather than made complicated; therefore, simplicity should be a key goal in design, and unnecessary complexity should be avoided.
 
@@ -36,6 +40,8 @@ KISS will:
 
 ### Think long-term maintenance, now
 
+// TODO
+
 Maintenance, on the other hand, is something to think about from the beginning.  
 It includes being able to ensure that the application will work in the long run, and that new features can be easily implemented. 
 
@@ -52,12 +58,16 @@ So, how do we organize that?
 
 ### From the tools point of view: 
 
+// TODO
+
 + Use version control (not sure I have to expand on that topic ;) )
 + Think of your shiny app as a tree, and divide it as much as possible into little pieces. 
 Then, create one Shiny module piece by piece. 
 This allows you to split the work, and also to have smaller files — it's easier to work on 20 files of 200 lines than on one big app.R file. 
 
 ### From the organisational point of view
+
+// TODO
 
  + Define one person to be in charge of having the big picture of the app. 
  This person will kick off the project, and write the skeleton of the app, with a good module and files structure. 
