--- a/golem.Rmd
+++ b/golem.Rmd
@@ -8,6 +8,10 @@ OK, that’s a lot of things to process.
 Is there a tool that can help us simplify this workflow? 
 Of course there is, and it’s called `{golem}`.
 
+## Getting started with `{golem}`
+
+// TODO
+
 It can be found at https://github.com/ThinkR-open/golem
 
 The stable release can be found on CRAN, and installed with:
@@ -17,7 +21,7 @@ install.packages("golem")
 ```
 
 
-`{golem}` can only be found on GitHub so you have to install it with:
+`{golem}` dev version can be found on GitHub and you'll have to install it with:
 
 ```{r eval = FALSE}
 remotes::install_github("Thinkr-open/golem")
@@ -27,8 +31,6 @@ remotes::install_github("Thinkr-open/golem")
 It all starts with an RStudio project, which contains a predefined setup for building your app. 
 The idea is that with `{golem}`, you don’t have to focus on the foundation of your app, and can spend your time thinking about what you want to do, not about how to do it. 
 It’s built on top of the working process we’ve developed at ThinkR, and tries to gather in one place the functions and tools we’ve created for building applications designed for production.
-
-## Getting started with `{golem}`
 
 Note before using `{golem}`: 
 
