--- a/step-by-step-design.Rmd
+++ b/step-by-step-design.Rmd
@@ -2,11 +2,15 @@
 
 ## Designing before coding
 
+// TODO
+
 Don’t rush into coding. 
 I know you want to, because it’s what we like to do and what we are good at. 
 But before entering the coding marathon, take time to think about the application and the way it will be deployed and used. 
 
 ## Ask questions
+
+// TODO
 
 Take a pen and a piece of paper and draw the app. 
 Talk about it with the people who will use the app, just to decipher what they actually need. 
