--- a/step-by-step-prototype.Rmd
+++ b/step-by-step-prototype.Rmd
@@ -4,13 +4,15 @@
 
 ## Prototyping is crucial
 
+// TODO
+
 > Rule of Optimization: Prototype before polishing. Get it working before you optimize it.
 
 http://www.catb.org/~esr/writings/taoup/html/ch01s06.html#rule_of_optimization
 
-
-
 ## The "UI first" approach
+
+// TODO
 
 I like to go “UI first”. For two main reasons:
 
