--- a/step-by-step-secure.Rmd
+++ b/step-by-step-secure.Rmd
@@ -6,6 +6,8 @@ Securing your app means two things: testing, and locking the application environ
 
 ## Testing your app
 
+// TODO
+
 So first, be sure to include tests all along the building process — just like any other R code. 
 As the app is contained in a package, you can use standard testing tools for testing the business logic of your app — as said in the first part, it’s important to split the backend functions and algorithm from the user interface. 
 That means that these backend functions can run outside of the application.
@@ -22,6 +24,8 @@ And of course, you can specify your own scenario, define your own events, etc.
 It’s not that straightforward to use, but once you get a good grasp of how it works, it’s a very powerful tool.
 
 ## A reproducible environment
+
+// TODO
 
 Secondly, secure your app means that it can be deployed again any time in the future — in other words, you have to ensure you’ve got a proper handle on the required R version, and of the package versions which are required to run your app. 
 That means that you have to be aware that upgrading a package might break your app — so, provide an environment that can prevent your app from breaking when a package gets updated. 
