--- a/structure.Rmd
+++ b/structure.Rmd
@@ -88,7 +88,7 @@ As they are backend functions (so specific to a project), `{golem}` can't provid
 + For the UI part, __remember that any UI function is designed to render an HTML element__. 
 So you can save a file as HTML, and then compare it to a UI object with the `golem::expect_html_equal()`.
 
-```
+```{r eval = FALSE}
 library(shiny)
 ui <- tagList(h1("Hello world!"))
 htmltools::save_html(ui, "ui.html")
@@ -101,7 +101,7 @@ golem::expect_html_equal(ui, "ui.html")
 This can for example be useful if you need to test a module. 
 A UI module function returns an HTML tag list, so once your modules are set you can save them and use them inside tests. 
 
-```
+```{r eval = FALSE}
 my_mod_ui <- function(id){
   ns <- NS("id")
   tagList(
@@ -119,7 +119,7 @@ golem::expect_html_equal(my_mod_ui("test"), my_mod_ui_test)
  
 + Testing package launch: when launching `golem::use_recommended_tests()`, you'll find a test built on top of `{processx}` that allows to check if the application is launch-able. Here's a short description of what happens: 
 
-```
+```{r eval = FALSE}
 # Standard testthat things
 context("launch")
 
@@ -166,7 +166,7 @@ test:
 
 - in `test-golem.R`:
 
-``` r
+```{r eval = FALSE}
 testthat::test_that(
   "app launches",{
     x <- process$new( 
