--- a/ux-matters.Rmd
+++ b/ux-matters.Rmd
@@ -22,7 +22,9 @@ If people can't understand how to use your application, your application isn't s
 This natural taste for back-end / server logic can deserve you on the long run: by neglecting the UI, you'll make your application less likely to be adopted among your users. 
 Which is a good way to fail your application project.
 
-## __The Unbearable Lightness of Being__
+## _The Unbearable Lightness of Being_
+
+// TODO
 
 > "Simplify, then add lightness"
 
@@ -68,16 +70,18 @@ One that people can understand and use in a matter of seconds.
 Don't implement features or visual elements that are not actually needed, just "in case". 
 And spend time working on that UI, really thinking about what visual elements you are implementing. 
 
-
-
 ## The danger of over-featuring
 
 ### Restrain reactivity 
+
+// TODO
 
 As a designer, you think: they'll select this, and when they release the slider, this will update automatically. 
 In real life, people make mistakes using the app, so if everything reacts to their every moves, the experience using the app can be bad.
 
 ### Too much interactivity 
+
+// TODO
 
 Don't make things interactive if there is no value in adding interactivity. 
 Adding interactivity widgets (in most cases) means adding visual elements to your original content: in other words, you're adding visual components that might distract the user from focusing on the content of the information.
@@ -92,6 +96,8 @@ Maybe a parallel with 90/00 website design with a lot of visual noise vs minimal
 
 ## About Accessibility 
 
+// TODO
+
 A user interface needs to be "ready to be consumed" by the broader audience possible. 
 That means people with visual, mobility, or cognitive disabilities. 
 
@@ -102,7 +108,7 @@ Web Accessibility is pretty standard concept in the web development world, and y
 
 ## Further reading 
 
-+ [_'Don't Make Me Think'_, Steve Krug](http://www.sensible.com/dmmt.html)
+// TODO
 
-// TODO: Find resources about simplicity in UI/UX design
++ [_'Don't Make Me Think'_, Steve Krug](http://www.sensible.com/dmmt.html)
 
