--- a/step-by-step-secure.Rmd
+++ b/step-by-step-secure.Rmd
@@ -1,6 +1,6 @@
 # (PART) Step 4: Secure   {-}
 
-# Build yourself a safe net {#step-secure}
+# Build yourself a safety net {#step-secure}
 
 Securing your app means two things: testing, and locking the application environment.
 
