correct typos in two views of complexity section

--- a/big-shiny.Rmd
+++ b/big-shiny.Rmd
@@ -36,24 +36,24 @@ When building sofwares, we can think of complexity from two points of view: the 
 
 An app is to be considered complex when it is big enough in term of size and functionalities so that it makes it impossible to reason about it at once, and you need to rely on tools to understand and handle this complexity.
 This type of complexity is called _implementation complexity_. 
-One of the goal of this book is to present you a methodology and toolings that will help you reduce this form of complexity. 
+One of the goal of this book is to present you a methodology and toolbox that will help you reduce this form of complexity. 
 
 For example, we'll talk about a design / prototype / build / secure / deploy, which helps you reduce the complexity of implementing and maintain new app features. 
 We'll also be talking at length about the `{golem}` package, which provides a toolkit for reducing the cognitive load of handling complexity in large Shiny applications. 
-For example, creatign a new Shiny module requires following a very strict structure. 
+For example, creating a new Shiny module requires following a very strict structure. 
 One way to do that is to remember how to do that and to code it from scratch (a method which has an important cognitive load and is very error prone). 
 Another way is to copy and paste an existing module and to adapt it, which is, as any copy and paste, likely to lead to errors. 
 Or there is the `{golem}` way, in which you rely on a robust tool to build the foundations for a new module.
 
-Another benefit of adopting automation for common application component is that it allows to be sure that you're following a convention. 
-And conventions are crucial when it comes to building and maintaining complex system: by imposing a formalized structure for a piece of code, it ehances readability, lessens the learning curve, and lightens the chance for typo and/or copy and paste error. 
+Another benefit of adopting automation for common application component is that it ensures that you're following a convention. 
+And conventions are crucial when it comes to building and maintaining complex systems: by imposing a formalized structure for a piece of code, it ehances readability, lessens the learning curve, and lightens the chance for typos and/or copy and paste errors. 
 
 
 +  Customers and users
 
-On the other hand, customers and end user see complexity as _interface complexity_. 
+On the other hand, customers and end users see complexity as _interface complexity_. 
 Interface complexity can be driven by a lot of elements, for example the probability of making an error while using the app, the difficulty to understand the logical progression in the the app, the presence of unfamiliar behaviour or terms, visual distractions...
-This book will also bring you strategy to help you cope with the need for simplification when it comes to designin interface. 
+This book will also bring you strategy to help you cope with the need for simplification when it comes to designing interface. 
 
 #### Balancing complexities
 
