make grammar corrections in assessing complexity

--- a/big-shiny.Rmd
+++ b/big-shiny.Rmd
@@ -81,8 +81,8 @@ _-> Insert here something of the like: "It's up to you to think about what's the
 
 #### Assessing complexity
 
-Another measure that sometime comes in the discussion is the codebase size. 
-It's relatively hard to use this number of lines metric, as R is very permissive when it comes to identation and line break. It also depends on your coding style and the packages you're using. For example, tidyverse packages encourage the use of the pipe (`%>%`)
+Another measure that sometimes comes in the discussion is the codebase size. 
+It's relatively hard to use this number of lines metric, as R is very permissive when it comes to identation and line breaks. It also depends on your coding style and the packages you're using. For example, tidyverse packages encourage the use of the pipe (`%>%`)
 ^[] 
 with one function by line, producing more lines in the end code.
 
