add example for 9 vs. 1 line of code for the same operation

--- a/big-shiny.Rmd
+++ b/big-shiny.Rmd
@@ -100,9 +100,14 @@ iris[
   ]
 ```
 
-9 lines of code for something that should also be written in one, three, five...
+9 lines of code for something that could also be written in one line.  
 
-Another drawback of this metric is that it focuses on numbers instead of readability, and on the long run yes, readability matters
+```{r}
+iris[1:5, c("Species")]
+```
+
+
+Another drawback of this metric is that it focuses on numbers instead of readability, and in the long run, yes, readability matters
 ^["Pressure to keep the codebase size down by using extremely dense and complicated implementation techniques can cause a cascade of implementation complexity in the system, leading to an un-debuggable mess.", from _The Art of Unix Programming_, "Chapter 13: Speaking of Complexity"]. 
 
 // TODO
