add {target = "_blank"} to links
Preserves the current page view by opening links in new tabs. https://yihui.name/en/2018/09/target-blank/

--- a/big-shiny.Rmd
+++ b/big-shiny.Rmd
@@ -21,7 +21,7 @@ With small and simple Shiny apps, no knowledge of HTML, CSS or JavaScript is req
 
 Things are quite simple when it comes to small prototypes or proof of concepts. 
 But things change when your application reaches "the cliff of complexity"
-^[We borrow this term from Charity Major, as heard in _Test in Production with Charity Majors_, [CoRecursive](https://corecursive.com/019-test-in-production-with-charity-majors/)].
+^[We borrow this term from Charity Major, as heard in _Test in Production with Charity Majors_, [CoRecursive](https://corecursive.com/019-test-in-production-with-charity-majors/)]{target="_blank"}.
 But what do we mean by complexity? 
 Getting a clear definition is not an easy task
 ^[Ironic right?]
@@ -74,7 +74,7 @@ But it can make the interface a little bit more complex for the user who have to
 We'll argue somewhere else in the book that not enough reactivity is better than too much reactivity, as the latter increases computation time, and relies on the assumption that the user makes the right action on the first try.
 Another good example is `{shiny}`'s `dateRangeInput()` function, which takes a start which is posterior to the end (which is the behaviour of the JavaScript plugin used in `{shiny}` to create this input). 
 Handling this special case is doable: with a little bit of craft, you can watch what the user inputs and throw an error if the start is after the end
-^[see [shiny/issues/2043#issuecomment-525640738](https://github.com/rstudio/shiny/issues/2043#issuecomment-525640738) for an example].
+^[see [shiny/issues/2043#issuecomment-525640738](https://github.com/rstudio/shiny/issues/2043#issuecomment-525640738){target="_blank"} for an example].
 That solution augments the implementation complexity, while leaving it as is requires the user to think about whether or not the starting date is before the ending date, thus increasing the interface complexity.
 
 _-> Insert here something of the like: "It's up to you to think about what's the best balance between these two sources." _
