change sentence structure in complexity sections

--- a/big-shiny.Rmd
+++ b/big-shiny.Rmd
@@ -27,14 +27,14 @@ Getting a clear definition is not an easy task
 ^[Ironic right?]
  as it very depends on who is concerned and who you're talking to.
 But let's try to come with a definition that will serve us in the context of engineering Shiny applications. 
-When building sofwares, we can think of complexity from two points of view: the complexity as it is seen by the coder, and the complexity as it is seen by the customer / end user
+When building software, we can think of complexity from two points of view: the complexity as it is seen by the coder, and the complexity as it is seen by the customer / end user
 ^[from _The Art of Unix Programming_, "Chapter 13: Speaking of Complexity"].
 
 #### Two views of complexity
 
 + From the developer point of view
 
-An app is to be considered complex when it is big enough in term of size and functionalities so that it makes it impossible to reason about it at once, and you need to rely on tools to understand and handle this complexity.
+An app is to be considered complex when it is big enough in terms of size and functionality that it makes it impossible to reason about it at once, and you must rely on tools to understand and handle this complexity.
 This type of complexity is called _implementation complexity_. 
 One of the goal of this book is to present you a methodology and toolkit that will help you reduce this form of complexity. 
 
